[package]
name = "any-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
futures = { version = "0.3", default-features = false }
pcloud = { version = "3.1", default-features = false }
percent-encoding = "2.3"
regex = { version = "1.11" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
time = { version = "0.3", default-features = false, features = ["parsing"] }
tokio = { version = "1", features = ["fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
mockito = { version = "1.7" }
test-case = "3.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
