[package]
name = "any-storage"
description = "Virtual FileStore Abstraction for different Backends"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
readme = "readme.md"
license = "MIT OR Apache-2.0"
version = "0.3.0"
edition = "2024"

[features]
serde = ["dep:serde"]

[dependencies]
bytes = "1.10"
derive_more = { version = "2.0.1", default-features = false, features = ["from"] }
futures = { version = "0.3", default-features = false }
pcloud = { version = "4.0.0-alpha.1", default-features = false }
percent-encoding = "2.3"
regex = { version = "1.11" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
time = { version = "0.3", default-features = false, features = ["parsing"] }
tokio = { version = "1", features = ["fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
mockito = { version = "1.7" }
test-case = "3.3.1"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
